# emissionfactor-nl

./: .copier-answers.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.dev.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md
docs/: Makefile  conf.py  index.rst  make.bat
src/co2_emission/: LSTM_multistep_univariate_forecasting.py  __init__.py  co2_bats_and_tbats.ipynb  co2_bats_and_tbats.py  co2_forecaster.py  co2_forecaster_SARIMA.py  gluon.py  morai.py  my_module.py  test_forecaster.py  test_forecaster_SARIMA.py
src/emissionfactor-nl/: predict.py  retrieve_ned.py  train_model.py
src/emissionfactor_nl/: predict.py  read_knmi.py  read_ned.py  retrieve_ned.py  retrieve_openmeteo.py  train_model.py
tests/: test_my_module.py
